2008-01-30  Johan Dahlin  <johan@gnome.org>

	* flumotion/component/encoders/wma/wma_wizard.py:
	* flumotion/component/encoders/wmv/wmv_wizard.py:
	Update to new wizard API
	
2008-01-29  Johan Dahlin  <johan@gnome.org>

	* flumotion/component/encoders/wmv/wmv-wizard.glade:
	Allow bitrates up to 16348kbps
	
	* flumotion/component/encoders/wma/wma.xml:
	* flumotion/component/encoders/wma/wma_wizard.py:
	* flumotion/component/encoders/wmv/wmv.xml:
	* flumotion/component/encoders/wmv/wmv_wizard.py:
	WMV -> Windows Media Video
	WMA -> windows Media Audio

2008-01-28  Johan Dahlin  <johan@gnome.org>

	* flumotion/component/encoders/wma/wma.xml:
	* flumotion/component/encoders/wma/wma_wizard.py:
	* flumotion/component/encoders/wmv/wmv-wizard.glade:
	* flumotion/component/encoders/wmv/wmv.xml:
	* flumotion/component/encoders/wmv/wmv_wizard.py:
	* flumotion/component/muxers/asf/asf.xml:

	Add initial wizard support, fixes #1571

2007-11-20  Michael Smith <msmith@fluendo.com>

	* flumotion/component/producers/wms/wms.xml:
	  Document 'secure' option a little better.

2007-07-26  Michael Smith <msmith@fluendo.com>

	* flumotion/component/producers/wms/asfparse.py:
	* flumotion/component/producers/wms/wms.py:
	* flumotion/component/producers/wms/wms.xml:
	  Refactor keyframe detection logic. Now audio streams are assumed to
	  not contain keyframes.
	  Deprecate (and stop using) emergency hack from last night. The
	  property is still declared in the registry though, so configs won't
	  stop working.

2007-07-25  Michael Smith <msmith@fluendo.com>

	* flumotion/component/producers/wms/wms.xml:
	  Copying and pasting a bug doesn't make it go away: bool, not
	  boolean.

2007-07-25  Michael Smith <msmith@fluendo.com>

	* flumotion/component/producers/wms/asfparse.py:
	* flumotion/component/producers/wms/wms.py:
	* flumotion/component/producers/wms/wms.xml:
	  Add (temporary) emergency hack to ignore keyframe flags in the