@@ -61,9 +61,9 @@ class WMVStep(VideoEncoderStep):
     def get_next(self):
         return self.wizard.get_step('Encoding').get_audio_page()
 
-    def worker_changed(self):
-        self.model.worker = self.worker
-        self.wizard.require_elements(self.worker, 'fluwmvenc')
+    def worker_changed(self, worker):
+        self.model.worker = worker
+        self.wizard.require_elements(worker, 'fluwmvenc')
 
 
 class WMVWizardPlugin(object):
