@@ -1,3 +1,9 @@
+2008-02-09  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* flumotion/component/encoders/wma/wma_wizard.py:
+	* flumotion/component/encoders/wmv/wmv_wizard.py:
+	  Apparently some API has changed.
+
 2008-01-30  Johan Dahlin  <johan@gnome.org>
 
 	* flumotion/component/encoders/wma/wma_wizard.py:
